force-app/main/default/objects/Discovery_Recommendation__c/Discovery_Recommendation__c.object-meta.xml
<CustomObject>
    <label>Discovery Recommendation</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Recommendations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>