force-app/main/default/objects/Discovery_Recommendation__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Security Hardening</fullName><default>false</default><label>Security Hardening</label></value>
            <value><fullName>Threat Monitoring</fullName><default>false</default><label>Threat Monitoring</label></value>
            <value><fullName>Identity Protection</fullName><default>false</default><label>Identity Protection</label></value>
            <value><fullName>AI Security</fullName><default>false</default><label>AI Security</label></value>
            <value><fullName>Automation</fullName><default>false</default><label>Automation</label></value>
            <value><fullName>Backup &amp; Recovery</fullName><default>false</default><label>Backup &amp; Recovery</label></value>
            <value><fullName>Compliance</fullName><default>false</default><label>Compliance</label></value>
            <value><fullName>Incident Response</fullName><default>false</default><label>Incident Response</label></value>
            <value><fullName>Infrastructure</fullName><default>false</default><label>Infrastructure</label></value>
            <value><fullName>Training</fullName><default>false</default><label>Training</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>