force-app/main/default/objects/Discovery_Recommendation__c/fields/Discovery_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Assessment__c</fullName>
    <label>Discovery Assessment</label>
    <referenceTo>Discovery_Assessment__c</referenceTo>
    <relationshipLabel>Discovery Recommendations</relationshipLabel>
    <relationshipName>Discovery_Recommendations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>