force-app/main/default/objects/Discovery_Recommendation__c/fields/Estimated_Effort__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort__c</fullName>
    <label>Estimated Effort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Quick Fix</fullName><default>false</default><label>Quick Fix</label></value>
            <value><fullName>Small Project</fullName><default>false</default><label>Small Project</label></value>
            <value><fullName>Medium Project</fullName><default>false</default><label>Medium Project</label></value>
            <value><fullName>Large Project</fullName><default>false</default><label>Large Project</label></value>
            <value><fullName>Ongoing Service</fullName><default>false</default><label>Ongoing Service</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>