force-app/main/default/objects/Discovery_Recommendation__c/fields/Estimated_Impact__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Impact__c</fullName>
    <label>Estimated Impact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Moderate</fullName><default>false</default><label>Moderate</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Transformational</fullName><default>false</default><label>Transformational</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>