force-app/main/default/objects/Discovery_Recommendation__c/fields/Include_in_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Proposal__c</fullName>
    <label>Include in Proposal</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>