force-app/main/default/objects/Discovery_Recommendation__c/fields/Recommendation_Name__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Name__c</fullName>
    <label>Recommendation Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>