force-app/main/default/objects/Discovery_Recommendation__c/fields/Recommended_Package__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Package__c</fullName>
    <label>Recommended Package</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Starter</fullName><default>false</default><label>Starter</label></value>
            <value><fullName>Professional</fullName><default>false</default><label>Professional</label></value>
            <value><fullName>Premium</fullName><default>false</default><label>Premium</label></value>
            <value><fullName>Enterprise</fullName><default>false</default><label>Enterprise</label></value>
            <value><fullName>Standalone / One-Time</fullName><default>false</default><label>Standalone / One-Time</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>