force-app/main/default/objects/Discovery_Recommendation__c/fields/Recommended_Product__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Discovery Recommendations</relationshipLabel>
    <relationshipName>Discovery_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>