force-app/main/default/objects/Discovery_Recommendation__c/fields/Related_Finding__c.field-meta.xml
<CustomField>
    <fullName>Related_Finding__c</fullName>
    <label>Related Finding</label>
    <type>Lookup</type>
    <referenceTo>Discovery_Finding__c</referenceTo>
    <relationshipLabel>Discovery Recommendations</relationshipLabel>
    <relationshipName>Discovery_Recommendations</relationshipName>
</CustomField>